# work_timer

./: Apply_for_Visa_Credit_Card_1.csv  Apply_for_Visa_Credit_Card_3.csv  Cargo.toml  Write_Documentation.csv  folder_Personal.csv  folder_Project_1.csv  folder_styles.json  folders.json  task_901420d4-30b3-4b26-9661-ee1612968a2a_export.csv  tasks.json  test_2.csv  testing_task.csv  work_timer_export.csv
src/: main.rs
