[package]
name = "work_timer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
eframe = "0.31.1"
egui = "0.26.0"
csv = "1.3.0"
egui-phosphor = { version = "0.9.0", features = ["fill"] }
